--- a/package.json
+++ b/package.json
@@ -27,35 +27,37 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^6.7.2",
-    "@nestjs/core": "^6.7.2",
+    "@apollo/gateway": "^0.16.6",
+    "@nestjs/common": "^7.1.3",
+    "@nestjs/core": "^7.1.3",
     "@nestjs/graphql": "^7.4.1",
-    "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/platform-express": "^7.1.3",
     "@prisma/client": "^2.0.0",
     "apollo-server-express": "^2.14.4",
     "graphql": "^15.1.0",
     "graphql-tools": "^6.0.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "ws": "^7.3.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^6.9.0",
-    "@nestjs/schematics": "^6.7.0",
-    "@nestjs/testing": "^6.7.1",
+    "@nestjs/cli": "^7.2.0",
+    "@nestjs/schematics": "^7.0.1",
+    "@nestjs/testing": "^7.1.3",
     "@prisma/cli": "^2.0.0",
     "@types/express": "^4.17.1",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.5",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
     "@types/supertest": "^2.0.8",
-    "jest": "^24.9.0",
-    "prettier": "^1.18.2",
+    "jest": "^26.0.1",
+    "prettier": "^2.0.5",
     "supertest": "^4.0.2",
-    "ts-jest": "^24.1.0",
-    "ts-loader": "^6.1.1",
+    "ts-jest": "^26.1.0",
+    "ts-loader": "^7.0.5",
     "ts-node": "^8.4.1",
     "tsconfig-paths": "^3.9.0",
-    "tslint": "^5.20.0",
+    "tslint": "^6.1.2",
     "typescript": "^3.6.3"
   },
   "jest": {
