chore(dependencies) add firebase admin sdk

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ APP_PORT=8080
 
 ADMINER_TAG=adminer:4.7.7-standalone
 ADMINER_PORT=3000
+
+# google credentials
+GOOGLE_APPLICATION_CREDENTIALS=serviceAccount.json
+FIREBASE_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+STORAGE_BUCKET=XXXXXXXXXXX.appspot.com
+FIREBASE_PROJECT_ID='XXXXXXXX-XXXXX'
