--- a/package.json
+++ b/package.json
@@ -29,16 +29,19 @@
   "dependencies": {
     "@apollo/gateway": "^0.16.6",
     "@nestjs/common": "^7.1.3",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.1.3",
     "@nestjs/graphql": "^7.4.1",
     "@nestjs/platform-express": "^7.1.3",
     "@prisma/client": "^2.0.0",
     "apollo-server-express": "^2.14.4",
+    "firebase-admin": "^8.12.1",
     "graphql": "^15.1.0",
     "graphql-tools": "^6.0.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
+    "validator": "^13.1.1",
     "ws": "^7.3.0"
   },
   "devDependencies": {
